# cue_terraform

./: .gitignore  .terraform.lock.hcl  BUILD.bazel  WORKSPACE  go.mod  go.sum  official.tf  providers.tf  providers.txt
.github/workflows/: main.yml
codegen/: codegen.bzl  tools.bzl
codegen/cmd/terraform-providers/: main.go
